--- a/_example-folder/collection.yml
+++ b/_example-folder/collection.yml
@@ -2,6 +2,7 @@ collections:
   example-folder:
     output: true
     order:
+      - Markdown syntax reference page.md
       - folder-page.md
       - example-subfolder/.keep
       - example-subfolder/subfolder-page.md
